force-app/main/default/objects/Registration_Alert__e/Registration_Alert__e.object-meta.xml
<CustomObject>
    <description>Published to communicate updates to draft course option enrollments</description>
    <label>Registration Alert</label>
    <pluralLabel>Registration Alerts</pluralLabel>
</CustomObject>