force-app/main/default/objects/Registration_Alert__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The message to display to the user</description>
    <inlineHelpText>The message to display to the user</inlineHelpText>
    <label>Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>