force-app/main/default/objects/Registration_Alert__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Record Id of the Course Option Enrollment that triggered this Registration Alert. Used to update and/or remove the alert</description>
    <inlineHelpText>Record Id of the Course Option Enrollment that triggered this Registration Alert. Used to update and/or remove the alert</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>