force-app/main/default/objects/Registration_Alert__e/fields/Show_Toast__c.field-meta.xml
<CustomField>
    <fullName>Show_Toast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, a toast message will be displayed to the user when this event occurs</description>
    <inlineHelpText>If true, a toast message will be displayed to the user when this event occurs</inlineHelpText>
    <label>Show Toast</label>
    <type>Checkbox</type>
</CustomField>