force-app/main/default/objects/Registration_Alert__e/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>If showing a toast message, optionally define a title</description>
    <inlineHelpText>If showing a toast message, optionally define a title</inlineHelpText>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>