force-app/main/default/objects/Registration_Alert__e/fields/Toast_Message__c.field-meta.xml
<CustomField>
    <fullName>Toast_Message__c</fullName>
    <description>If showing a toast message, optionally define a message for the body</description>
    <label>Toast Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>